# space

./: .gitattributes  .gitignore  README.md  pyproject.toml
automation/: auto.py  data.py  tape.vhs  telemetry_log.csv  telemetry_report.txt
ballistic/: ball.py
rasterio/: ndvi_calc.py
spacepy/: space.py
spacepy/themis_data/tha/fgm/: thb_l1_fbk_20241231_v01.cdf
spicepy/: spicepy.py
