[tool.poetry]
name = "space"
version = "0.1.0"
description = ""
authors = ["Artem Getahvili <artik1098@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.4.3"
matplotlib = "^3.10.0"
spiceypy = "^6.0.0"
pandas = "^2.2.3"
spacepy = "^0.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
